--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 
 .DS_Store
+.app.js
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
