--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
 .DS_Store
-.app.js
+app.js
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
